@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:26:08 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:31:07 +0800</lastBuildDate>
 
   <item>
   <title>K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V白金認證、Infinite慶祝出道15週年</title>
@@ -19,5 +19,11 @@
   <description>睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:26:08 +0800</pubDate>
+</item><item>
+  <title>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</title>
+  <link>https://www.famechos.me/news/K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕/</link>
+  <description>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</description>
+  <category>K-Pop</category>
+  <pubDate>Thu, 10 Oct 2024 16:31:07 +0800</pubDate>
 </item></channel>
 </rss>
