@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:29:56 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:31:07 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -112,5 +112,11 @@
   <description>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:29:56 +0800</pubDate>
+</item><item>
+  <title>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</title>
+  <link>https://www.famechos.me/news/K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕/</link>
+  <description>K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕</description>
+  <category>K-Pop</category>
+  <pubDate>Thu, 10 Oct 2024 16:31:07 +0800</pubDate>
 </item></channel>
 </rss>
