@@ -126,4 +126,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop粉絲遭剝削！海譜等巨頭違法行為罰款僅300萬元，議員轟：懲罰太輕/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:31:07+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
